ingress/nginx-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gyeongnam-nignx-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gyeongnam-nginx
  template:
    metadata:
      labels:
        app: gyeongnam-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gyeongnam-nginx-service
spec:
  # ClusterIP는 클러스터 내부에서만 접근가능한 Service 를 생성한다.
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: gyeongnam-nginx
