ingress/nginx-ingress.yaml
## ingress 설치 명령어
## kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gyeongnam-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #첫번째 prefix 제거
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - "server.gyeongnam97.shop"
      secretName: nginx-gyeongnam-com-tls
  rules:
    - host: server.gyeongnam97.shop
      http:
        paths:
          - path: /gyeongnam/ #모든 url요청을 nginx -service로 라우팅
            pathType: Prefix
            backend:
              service:
                name: gyeongnam-nginx-service
                port:
                  number: 80
